--- a/SDL_GLattr.mediawiki
+++ b/SDL_GLattr.mediawiki
@@ -55,8 +55,8 @@ An enumeration of OpenGL configuration attributes.
 |SDL_GL_ACCELERATED_VISUAL
 |set to 1 to require hardware acceleration, set to 0 to force software rendering; defaults to allow either
 |-
-|<style="color: #808080;">SDL_GL_RETAINED_BACKING
-|<style="color: #808080;">not used, deprecated
+|<rowstyle="color: #808080;">SDL_GL_RETAINED_BACKING
+|not used (deprecated)
 |-
 |SDL_GL_CONTEXT_MAJOR_VERSION
 |OpenGL context major version; see [[#OpenGL|Remarks]] for details
