--- a/SGCodeExamples.mediawiki
+++ b/SGCodeExamples.mediawiki
@@ -19,12 +19,12 @@ All [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#api API pages] in this wiki co
 <br/>
 == Adding Your Code Examples ==
  1. Begin by going to the page you wish to edit and selecting <<Color2(blue,Edit (Text))>> or <<Color2(blue,Edit (GUI))>> in the left column to begin editing.
-  ~-Reminder: Markup info provided here is specifically for use in the Text editor but should work in both.-~
+  {i} ~-Markup info provided here is specifically for use in the Text editor but should work in both.-~
  1. Scroll down in the edit window to the section that begins with ```== Code Examples ==```.  Add your content below this heading following the conventions in this style guide.
  1. Find information relevant to your content in the style guide sections [[#formatting|below]] and apply the appropriate formatting as you create your content.
  1. Preview your work as you go by clicking <<Color2(blue,Preview)>> in the left column.  
  1. Save your work by clicking <<Color2(blue,Save Changes)>> in the left column after you are satisfied with your content and have filled in the Comment field under the editing box. 
-For additional assistance with editing, saving, or wiki-appropriate markup see the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] Style Guide.
+For additional assistance with editing, saving, or wiki-appropriate markup see the [[SGWikiBasics|Wiki Basics]] Style Guide.
 <br/>
 <br/>
 <br/>
@@ -51,7 +51,7 @@ Since many functions commonly occur in programs as pairs or small groups of rela
 
 In general this is best accomplished by copying and pasting and keeping pages separate.  
 
-Very occasionally it may be appropriate to use an [[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Includes|Include]] to link the pages together and automatically copy the example (and any future changes) from one "source" page to one or more other pages.
+Very occasionally it may be appropriate to use an [[SGWikiBasics#Includes|Include]] to link the pages together and automatically copy the example (and any future changes) from one "source" page to one or more other pages.
 
 <<Color2(red,''Important!'')>> This should only be done if the code example:
   a. shows a fundamental use of all functions it is copied to
@@ -60,7 +60,7 @@ Very occasionally it may be appropriate to use an [[http://wiki.libsdl.org/moin.
 
 ''If'' it is determined that an Include is the best way to go, please follow these guidelines:
 
-''Action'': In addition to following the other guidelines in this style guide, also follow the general instructions found in the [[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Includes|Wiki Basics]] style guide to create the Include markup on each page.
+''Action'': In addition to following the other guidelines in this style guide, also follow the general instructions found in the [[SGWikiBasics#Includes|Wiki Basics]] style guide to create the Include markup on each page.
 
 ''Action'': We are keeping a list of all pages using Includes for future reference.  In order to keep this list up to date, please email <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> with a list of all pages that received the Include and what page was used as the source.  We appreciate your taking time for this extra step to help us keep our records accurate and useful.  Thank you!
 
