--- a/CategoryIO.mediawiki
+++ b/CategoryIO.mediawiki
@@ -10,11 +10,17 @@
 
 
 == Introduction ==
-^This category contains functions for handling^ ,,This file provides a,, ^the^ general interface for SDL to read and write data streams.  It can easily be extended to files, memory, etc.
+This category contains functions for handling the general interface for SDL to read and write data streams.  It can easily be extended to files, memory, etc.
+
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Enumerations == -->
+<!-- #<<FullSearch(category:CategoryEnum CategoryIO -SGEnumerations)>> -->
+
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct CategoryIO -SGStructures)>> -->
 
 == Functions ==
-
-<<FullSearch(category:CategoryIO -CategoryEnum -CategoryStruct)>>
+<<FullSearch(category:CategoryIO -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
