--- a/CategorySharedObject.mediawiki
+++ b/CategorySharedObject.mediawiki
@@ -13,15 +13,21 @@
 
 This category contains functions for handling shared objects and additional functions.
 
-^There are some^ ,,S,,ystem dependent library loading routines.
-: ,,Some,, things to keep in mind:
+There are some system dependent library loading routines.
+: Things to keep in mind:
 * These functions only work on C function names.  Other languages may have name mangling and intrinsic language support that varies from compiler to compiler.
 * Make sure you declare your function pointers with the same calling convention as the actual library function.  Your code will crash mysteriously if you do not do this.
-* Avoid namespace collisions.  If you load a symbol from the library, it is not defined ,,whether or not,, ^as to whether^ it goes into the global symbol namespace for the application ^or not^.  If it does and it conflicts with symbols in your code or other shared libraries, you will not get the results you expect. :)  ''or''  ;)
+* Avoid namespace collisions.  If you load a symbol from the library, it is not defined as to whether it goes into the global symbol namespace for the application or not.  If it does and it conflicts with symbols in your code or other shared libraries, you will not get the results you expect.
+
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Enumerations == -->
+<!-- #<<FullSearch(category:CategoryEnum CategorySharedObject -SGEnumerations)>> -->
+
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct CategorySharedObject -SGStructures)>> -->
 
 == Functions ==
-
-<<FullSearch(category:CategorySharedObject -CategoryEnum -CategoryStruct)>>
+<<FullSearch(category:CategorySharedObject -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
