--- a/CategoryPlatform.mediawiki
+++ b/CategoryPlatform.mediawiki
@@ -12,12 +12,18 @@
 
 
 == Introduction ==
-^This category contains functions for handling information about the current platform.^ ,,Functions in this category allow you to gather information about the platform you are working on / are compiling/creating for.,,
+This category contains functions for handling information about the current platform. 
 
+
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Enumerations == -->
+<!-- #<<FullSearch(category:CategoryEnum CategoryPlatform -SGEnumerations)>> -->
+
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct CategoryPlatform -SGStructures)>> -->
 
 == Functions ==
-
-<<FullSearch(category:CategoryPlatform -CategoryEnum -CategoryStruct)>>
+<<FullSearch(category:CategoryPlatform -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
