--- a/CategoryPower.mediawiki
+++ b/CategoryPower.mediawiki
@@ -10,14 +10,18 @@
 
 
 == Introduction ==
-^This category contains functions for handling^ ,,This category contains,, the SDL power management routines. 
+This category contains functions for handling SDL power management routines. 
 
+
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryPower)>>
+<<FullSearch(category:CategoryEnum CategoryPower -SGEnumerations)>>
+
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct CategoryPower -SGStructures)>> -->
 
 == Functions ==
-
-<<FullSearch(category:CategoryPower -CategoryEnum -CategoryStruct)>>
+<<FullSearch(category:CategoryPower -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
